--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,29 @@
+name: Upload website to S3
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Install dependencies and run unit tests
+        run: npm install && npm run test
+
+      - name: Build React App
+        run: REACT_APP_IGDB_CLIENT_ID=${{ secrets.IGDB_CLIENT_ID}} REACT_APP_IGDB_AUTH=${{ secrets.IGDB_AUTH}} REACT_APP_IGDB_CORS=${{ secrets.IGDB_CORS}} npm run build
+
+      - name: Deploy static assets to S3 bucket
+        run: aws s3 sync ./build/ s3://${{ secrets.BUCKET }} --delete
